<resources>
    <string name="app_name">Nested</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bot_navigation">BotNavigationActivity</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_activity_rental_due">RentalDueActivity</string>

    <!--Dialog string -->


    <!-- Login string -->
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_login_name">Email</string>
    <string name="label_login_pass">Password</string>
    <string name="content_description">Content Description</string>
    <string name="app_subtitle">Rentals made easy</string>
    <string name="label_login_option">Login With</string>
    <string name="login">Login</string>
    <string name="guest">Continue as Guest</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="profile_warning">Your profile is currently incomplete. Please complete your profile to avoid any inconvenience.</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="dialog_select_photo">selectPhoto</string>
</resources>
